@@ -298,7 +298,6 @@ CMake options (option - default value: description):
 	- `USE_CHIPTUNE_SID` - autodetect: enabled if libsidplayfp exists.
 	- `USE_TAGLIB` - `ON`: enable/disable tag editor.
 	- `USE_AVRESAMPLE` - `OFF`: use libavresample instead of libswresample.
-	- `USE_OPENGL_FOR_VISUALIZATIONS` - Qt >= 5.6.0 feature, `OFF`: it allows to use "QOpenGLWidget" for visualizations.
 	- `USE_JEMALLOC` - `OFF`: link to jemalloc memory allocator which can reduce memory usage.
 	- `USE_CMD` - Windows only, `OFF`.
 	- `USE_PROSTOPLEER` - `ON`: enable/disable Prostopleer in Extensions module.
