@@ -19,6 +19,10 @@
 #include <OpenGL2.hpp>
 #include <OpenGL2Writer.hpp>
 
+#ifdef OPENGL_NEW_API
+	#include <QGuiApplication>
+#endif
+
 OpenGL2::OpenGL2() :
 	Module("OpenGL2")
 {
@@ -27,11 +31,8 @@ OpenGL2::OpenGL2() :
 	init("Enabled", true);
 	init("AllowPBO", true);
 #ifdef OPENGL_NEW_API
-	#ifdef DEFAULT_RTT
-		init("ForceRtt", true);
-	#else
-		init("ForceRtt", false);
-	#endif
+	const QString platformName = QGuiApplication::platformName();
+	init("ForceRtt", (platformName == "cocoa" || platformName == "android"));
 #endif
 #ifdef VSYNC_SETTINGS
 	init("VSync", true);
@@ -79,6 +80,7 @@ ModuleSettingsWidget::ModuleSettingsWidget(Module &module) :
 
 #ifdef OPENGL_NEW_API
 	forceRttB = new QCheckBox(tr("Force render to texture if possible (not recommended)"));
+	forceRttB->setToolTip(tr("Always enabled on Wayland and Android platforms.\nSet visualizations to OpenGL mode if enabled."));
 	forceRttB->setChecked(sets().getBool("ForceRtt"));
 #endif
 
