@@ -5,6 +5,7 @@ Changes in QMPlay2 build 17.04.16:
 	- option to reconnect live network streams on error,
 	- add experimental VideoToolBox decoder for macOS,
 	- use Opus as default codec for YouTube videos,
+	- use OpenGL as option for visualizations,
 	- improve downloading from YouTube,
 	- CUVID bugfix,
 
